@@ -5,6 +5,10 @@ Changelog
 1.1
 ---
 
+* Do not traverse to "view" in indexer, this could cause security issues especially in tests.
+  Using now a fake-view for enabling z2 mode.
+  [jbaumann]
+
 
 1.0
 ---
